--- a/NETWORK_MEDIA_1/ex2-1.html
+++ b/NETWORK_MEDIA_1/ex2-1.html
@@ -13,7 +13,10 @@
     </p>
 
     <p>
-        (&nbsp;&nbsp; )
+        (&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;) <br/>
+
+        &lt; body &gt; &nbsp; angled bracket and space <br />
+        
     </p>
 
 </body>
